# funsearch

./: .gitignore  README.md  pyproject.toml
cmd/: mock.py
docs/: activity_log.md  事業の観点での説明.md  変更点改良点.md  自分の言葉で説明.md  設計.md
docs/自身の研究分野への適用/: pilot_study.ipynb  適用可能性.md
docs/論文の検証/: bactgrow.md  bactgrow検証.md  bactgrow検証v2.md  evaluator検証.md  llmsrを用いたnpdaの発見.md  oscillator1.md  oscillator1検証.md  oscillator2検証.md  oscillator2検証v2.md  oscillator2検証v3.md  pilot_study.ipynb
examples/: bactgrow.py  bactgrow_numpy.py  npda.py  npda_jax.py  npda_numpy.py  oscillator.py  oscillator1.py  oscillator2_numpy.py  sr_demo.ipynb
funsearch/archipelago/: __init__.py  boltzmann_island.py  domain.py  domain.test.py  mock.py  mock.test.py  selective_evolver.py
funsearch/cluster/: __init__.py  cluster.py  default.py  default.test.py  domain.py  evolver.py  evolver.test.py  mock.py  mock.test.py
funsearch/function/: __init__.py  default.py  domain.py  domain.test.py  func.py  mock.py  mock.test.py  py_ast_skeleton.py  py_ast_skeleton.test.py  python_function.py  python_function.test.py
funsearch/llm/: __init__.py  code_manipulation.py  code_manipulation.test.py  mock.py  mock.test.py  ollama.test.py  out2.txt  profiler.py  py_mutation_engine.py  py_mutation_engine.test.py
funsearch/llmsr/: __init__.py  code_manipulation.py  code_manipulation.test.py  evolver.py  ollama.test.py  profiler.py  py_mutation_engine.py  py_mutation_engine.test.py
funsearch/observer/: __init__.py
scripts/: output_manipulation.py  run  run_example  tune_gemini.py
(+18 files in other folders)
